<resources>
    <string name="app_name">IronGym</string>
    <string name="title_activity_gymprogram_a">gymprogram_a</string>
    <string name="title_activity_gymprogram_b">gymprogram_b</string>
    <string name="button_NewExerice">Skapa nytt pass</string>
    <string name="pass_a">Pass A</string>
    <string name="pass_b">Pass B</string>
    <string name="knaboj">Knäböj</string>
    <string name="bankpress">Bänkpress</string>
    <string name="rodd">Rodd</string>
    <string name="vadpress">Vadpress</string>
    <string name="set">Set</string>
    <string name="reps">Reps</string>
    <string name="vikt">Vikt</string>
    <string name="visa">Visa</string>
    <string name="spara">Spara</string>
    <string name="saved">Sparad!</string>
    <string name="dbEmpty">Databas tömd.</string>
    <string name="emptytext">Tryck på knappen för att tömma databasen. "\n" Obs!! all data kommer att försvinna.</string>

    <string name="exerciseHeader">Övning:</string>
    <string name="history">Historik</string>
    <string name="erase_data">Radera data</string>
    <string name="ProgramName">Välj namn på träningsprogram</string>
    <string name="next">Nästa</string>

    <string-array name="exerciseSuggestions">
        <item>Knäböj</item>
        <item>Bänkpress</item>
        <item>Rodd</item>
        <item>Vadpress</item>


    </string-array>
</resources>
